fix for ui list title too long

--- a/src/theme.less
+++ b/src/theme.less
@@ -426,6 +426,7 @@ md-select-menu md-option:focus:not([disabled]):not([selected]) {
     div > md-list-item.md-2-line, md-list-item.md-2-line>.md-no-style {
         height: 48px;
         min-height: 48px;
+        width: 100px;
     }
 
     md-progress-linear {
